--- a/orders/package.json
+++ b/orders/package.json
@@ -4,15 +4,21 @@
   "description": "",
   "main": "orders.js",
   "scripts": {
+    "prebuild": "rm -rf dist && tsc",
+    "build": "esbuild orders.ts --bundle --minify --sourcemap --platform=node --target=es2020 --outfile=dist/orders.js",
+    "postbuild": "cd dist && zip -r ../../orders.zip orders.js*",
     "test": "node orders.test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/aws-lambda": "^8.10.106",
     "aws-sdk": "^2.1178.0",
     "faker": "^5.5.3"
   },
   "devDependencies": {
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "esbuild": "^0.15.10",
+    "typescript": "^4.8.4"
   }
 }
